--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
 
 
 
+ @media screen and (min-width:1900px){
+    .item img{
+        width:100%;
+        height: 800px;
+    }
+ }
+
+.item img{
+  height: 500px;
+  width: 100%;
+}
 
 ul li a {
     text-transform: uppercase;
@@ -377,15 +388,15 @@ ul li a {
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="assets/LINER SERVICE OP2.jpg" style="width:100%; height: 600px;">
+        <img class="carousel_img" src="assets/LINER SERVICE OP2.jpg" >
       </div>
 
       <div class="item">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Arabian_Sea_-_n22e70.jpg/1200px-Arabian_Sea_-_n22e70.jpg" alt="Chicago" style="width:100%; height: 600px;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Arabian_Sea_-_n22e70.jpg/1200px-Arabian_Sea_-_n22e70.jpg" alt="Chicago">
       </div>
     
       <div class="item">
-        <img src="assets/LINER HOME.jpg" alt="New york" style="width:100%; height: 600px;">
+        <img src="assets/LINER HOME.jpg" alt="New york">
       </div>
     </div>
 
