--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ ul li a {
                                 
                                           <figure class="boximg">
                                     <a href="importexport.html">
-                                        <h3 class="animate social-lists animate">Import/Export Services and Customs Brokerage  </h3>
+                                        <h3 class="animate social-lists animate">Ocean Freight  </h3>
                                     <img  src="assets/bg.jpg" class="doc-img animate " alt="doctor-2"> 
                                     </a>
                             </figure>
@@ -471,7 +471,7 @@ ul li a {
                                 
                                           <figure class="boximg">
                                     <a href="importexport.html">
-                                        <h3 class="animate social-lists animate">Import/Export Services and Customs Brokerage  </h3>
+                                        <h3 class="animate social-lists animate">Air Frieght</h3>
                                     <img  src="assets/bg.jpg" class="doc-img animate " alt="doctor-2"> 
                                     </a>
                             </figure>
