--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     }
  }
 
-.item img{
+
+img.carousel_img{
   height: 500px;
   width: 100%;
 }
@@ -195,7 +196,11 @@ ul li a {
       left: 10px;
     padding: 1px 196px;
 }
-/* Navigation */
+
+/*-----------------------------*/
+/* Navigation css starts here */
+/*---------------------------*/
+
 .navbar-default {
   background-color: #011034;
   border-color: #011034;
@@ -313,6 +318,11 @@ ul li a {
 .navbar-default .navbar-nav > li > .dropdown-menu {
     background-color: #022638;
 }
+
+/*Navigation CSS ends herer*/
+/*------------------------*/
+
+
 /*=============== //Home-team ===============*/
 
 </style>
@@ -322,8 +332,6 @@ ul li a {
 <body translate="no">
 
 
-
-   
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
          <ul style="float:right;">
