--- a/test.html
+++ b/test.html
@@ -19,10 +19,22 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <!-- <link rel="stylesheet" type="text/css" href="styles/main.css"> -->
      <link rel="stylesheet" type="text/css" href="styles/mediaqueries.css">
     <style>
 
+
+/*header new*/
+ul#menu li {
+    display:inline;
+    color:red;
+}
+
+.navbar{
+ background-color: red;
+ margin-bottom: -2px;
+}
+/*header new ends here*/
 
 @media screen and (min-width: 1900px){
    .animate-arrow {
@@ -199,34 +211,45 @@ ul li a {
 </head>
 
 <body translate="no">
+
+
+
 <!-- header testing starts here -->
- <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-     <!--  <h1>hello world</h1>
-      <h1>hello world</h1>
-      <h1>hello world</h1> -->
+ <nav class="navbar">
+  <div class="container-fluid">
+    <div class="col-md-3">
+       <a class="navbar-brand" href="#">
+       <img src="assets/logo.png" style="height: 100px; width: 200px; padding-bottom: 5px;">
+       </a>
     </div>
+
+    <div class="col-md-9">
+      <div class="col-md-12">
+      <ul id="menu" style="padding: 14px;">
+        <li>Mobile:+91-973625137</li>
+        <li>contact:contact@gmail.com</li>
+      </ul>
+      </div>
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#"><img src="assets/logo.png" style="height: 65px; width: 180px;"></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Option <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Page 1-1</a></li>
-            <li><a href="#">Page 1-2</a></li>
-            <li><a href="#">Page 1-3</a></li>
+            <li><a href="#">option</a></li>
+            <li><a href="#">option</a></li>
+            <li><a href="#">option</a></li>
           </ul>
         </li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact Us</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
@@ -234,7 +257,9 @@ ul li a {
       </ul>
     </div>
   </div>
+  </div>
 </nav>
+  
   
 <!-- header testing end -->
 <section>
@@ -250,11 +275,11 @@ ul li a {
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="assets/LINER SERVICE OP2.jpg" style="width:100%; height: 600px;">
+        <img src="assets/LINER SERVICE OP2.jpg" style="width:100%; height: 400px;">
       </div>
 
       <div class="item">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Arabian_Sea_-_n22e70.jpg/1200px-Arabian_Sea_-_n22e70.jpg" alt="Chicago" style="width:100%; height: 600px;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Arabian_Sea_-_n22e70.jpg/1200px-Arabian_Sea_-_n22e70.jpg" alt="Chicago" style="width:100%; height: 400px;">
       </div>
     
       <div class="item">
