--- a/test.html
+++ b/test.html
@@ -3,45 +3,34 @@
 <html lang="en" >
 
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
-    <!-- Latest compiled and minified CSS -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-    <!-- jQuery library -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-    <!-- Latest compiled JavaScript -->
-    <!-- font -->
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Latest CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="styles/main.css"> -->
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
      <link rel="stylesheet" type="text/css" href="styles/mediaqueries.css">
     <style>
 
-
-/*header new*/
-ul#menu li {
-    display:inline;
-    color:red;
-}
-
-.navbar{
- background-color: red;
- margin-bottom: -2px;
-}
-/*header new ends here*/
+    html{
+      overflow-x: hidden;
+    }
 
 @media screen and (min-width: 1900px){
    .animate-arrow {
     left: 7px;
-    padding: 1px 665px;
+    margin: 1px 78px;
+  }    
 }
 
+@media (min-width: 1200px) and (max-width:1500px){
+  img.img-responsive{
+      height: 450px !important;
+      width: 100% !important;
+    }
 }
 
 
@@ -49,16 +38,15 @@ ul li a {
     text-transform: uppercase;
     color: #022638;
 }
+
 .asidesection{
   background: linear-gradient(0deg,rgba(198, 200, 202, 0.8),rgba(0, 0, 0, 0.8)),url(assets/projecthome.jpg) center center;
   padding: 75px 10px;
   
-
 }
 .firstsection{
    background:linear-gradient(0deg,rgba(2,38,56,0.8),rgba(0,0,0,0.8)),url(assets/Shipping-Banner12.jpg) center center;
   height: 600px;
-  
   
 }
 .firstsec-title{
@@ -72,33 +60,17 @@ ul li a {
     color: #ffffff;
 }
  
-
-
-
-/*.animate {
-    -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}*/
-
 /*=============== Home-team ===============*/
-
 
 .home-doctors{
  padding: 28px 6px 5px 19px;
 }
-
-
-
 
 .home-doctors img {
  width: 192px;
  height: 192px;
   
 }
-
 
 .home-doctors h3{
  position: absolute;
@@ -108,28 +80,15 @@ ul li a {
     text-align: center;
     opacity: 0;
     z-index: 1;
-    /* background: #707171; */
     color: #ffffff;
     padding: 7px 0px;
-    /* border: 1px solid rgba(255, 255, 255, 0.33); */
 }
 
-
-
-
-
-/*.doc-item .doc-img{
-   
-
-  opacity: 0.7;
-}*/
 .boximg {
   position: relative;
-  
   border: 1px solid #333;
   margin: 2%;
   overflow: hidden;
-  /*width: 540px;*/
 }
 .boximg img {
   max-width: 100%;
@@ -149,7 +108,6 @@ ul li a {
   opacity: 1;
       font-size: 20px;
 }
-
 .chevron {
  position: absolute;
     width: 30px;
@@ -182,6 +140,7 @@ ul li a {
   width: 50%;
   transform: skewY(-30deg);
 }
+
 @keyframes move-chevron {
   25% {
     opacity: 1;
@@ -199,61 +158,61 @@ ul li a {
     transform: translateY(4.8rem) scale(0.5);
   }
 }
+
+/*=============== //Home-team ===============*/
+
 .animate-arrow{
       left: 10px;
     padding: 1px 196px;
 }
-
-/*=============== //Home-team ===============*/
 
 </style>
 
 </head>
 
 <body translate="no">
-
-
-
 <!-- header testing starts here -->
- <nav class="navbar">
+ <nav class="navbar navbar-fixed-top">
   <div class="container-fluid">
     <div class="col-md-3">
        <a class="navbar-brand" href="#">
-       <img src="assets/logo.png" style="height: 100px; width: 200px; padding-bottom: 5px;">
+       <img src="assets/logo.png" style="height: 80px; width: 200px;">
        </a>
     </div>
 
     <div class="col-md-9">
       <div class="col-md-12">
       <ul id="menu" style="padding: 14px;">
-        <li>Mobile:+91-973625137</li>
-        <li>contact:contact@gmail.com</li>
+        <li>&nbsp;&nbsp;<span class="glyphicon glyphicon-earphone"></span>044 4088 0000</li>&nbsp;  &nbsp;&nbsp;
+        <li><span class="glyphicon glyphicon-inbox"></span> shipping@ascent.com </li>&nbsp;
       </ul>
       </div>
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <!-- <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
+        <span class="icon-bar"></span>      --> 
+        <span><img src="assets/collapse2.png" style="width: 30px;height: 30px;"><span>                 
       </button>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Option <span class="caret"></span></a>
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Services <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">option</a></li>
-            <li><a href="#">option</a></li>
-            <li><a href="#">option</a></li>
+            <li><a href="#">International Freight Management</a></li>
+            <li><a href="#">Project Cargo Worldwide</a></li>
+            <li><a href="#">Linear Agency</a></li>
           </ul>
         </li>
+
+
         <li><a href="#">Services</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <ul class="nav navbar-nav navbar-right" style="margin-right: 20px;">
+      <li id="quote" class="quote" style="background-color:#0076bf;"><a href="getaquote.html" style="color:#fff;"><span class="glyphicon glyphicon-log-in"></span> Get a Quote</a></li>
       </ul>
     </div>
   </div>
@@ -263,7 +222,7 @@ ul li a {
   
 <!-- header testing end -->
 <section>
-<div class="container-fluid" style="margin-bottom: -50px;">
+<div class="container-fluid" style="margin-bottom: -50px; margin-top:100px;">
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -275,15 +234,15 @@ ul li a {
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="assets/LINER SERVICE OP2.jpg" style="width:100%; height: 400px;">
+        <img class="img-responsive" class="slideone" src="assets/LINER SERVICE OP2.jpg" style="width:100%; max-height: 800px;">
       </div>
 
       <div class="item">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Arabian_Sea_-_n22e70.jpg/1200px-Arabian_Sea_-_n22e70.jpg" alt="Chicago" style="width:100%; height: 400px;">
+        <img class="img-responsive" class="slidetwo" src="assets/LINER OP3.jpg" alt="Chicago" style="width:100%; max-height: 800px;">
       </div>
     
       <div class="item">
-        <img src="assets/LINER HOME.jpg" alt="New york" style="width:100%; height: 600px;">
+        <img class="img-responsive" class="slidethree" src="assets/LINER HOME.jpg" alt="New york" style="width:100%; max-height: 800px;">
       </div>
     </div>
 
@@ -654,7 +613,7 @@ ul li a {
       </div>
     
       </section>
-<footer id="footer" class="section footer-classic context-dark bg-image">
+<footer id="footer" class="section footer-classic context-dark bg-image" style="background-color: #000;">
         <div class="container" >
           <div class="row row-30">
             <div class="col-md-4 col-xl-5">
