--- a/test.html
+++ b/test.html
@@ -196,24 +196,31 @@ ul li a {
       </button>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Services <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">International Freight Management</a></li>
-            <li><a href="#">Project Cargo Worldwide</a></li>
-            <li><a href="#">Linear Agency</a></li>
-          </ul>
-        </li>
-
-
-        <li><a href="#">Services</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right" style="margin-right: 20px;">
+      <ul class="top-level-menu navbar-right" style="margin-right: 20px;">
+    <li><a href="#">About</a></li>
+    <li><a href="#">Services</a></li>
+    <li>
+        <a href="#">Offices</a>
+        <ul class="second-level-menu">
+            <li><a href="#">Chicago</a></li>
+            <li><a href="#">Los Angeles</a></li>
+            <li>
+                <a href="#">New York</a>
+                <ul class="third-level-menu">
+                    <li><a href="#">Information</a></li>
+                    <li><a href="#">Book a Meeting</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                    <li><a href="#">Jobs</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Seattle</a></li>
+        </ul>
+    </li>
+    <li><a href="#">Contact</a></li>
+    <ul class="nav navbar-nav navbar-right" style="margin-right: 20px;">
       <li id="quote" class="quote" style="background-color:#0076bf;"><a href="getaquote.html" style="color:#fff;"><span class="glyphicon glyphicon-log-in"></span> Get a Quote</a></li>
       </ul>
+</ul>
     </div>
   </div>
   </div>
