--- a/heavylift.html
+++ b/heavylift.html
@@ -157,32 +157,49 @@ div.content {
 </style>
    </head>
    <body translate="no" >
-      <header>
-         <div class="container-fluid">
-            <ul style="float:right;">
-               <li><a href="" style="text-transform: lowercase;"><span class="glyphicon glyphicon-envelope">&nbsp;</span>contact@ascent.com</a></li>
-               <li><a href=""><span class="glyphicon glyphicon-phone-alt"> 044-4088-0000 </a></li>
-               <li><a href="getaquote.html"><button class="btn btn-primary">Get a Quote</button></a></li>
-            </ul>
-         </div>
-         <nav>
-            <h1>
-               <a href="index.html"><img src="assets/logo.png" class="logo"></a>
-            </h1>
-            <div class="menu_items"></div>
-            <span class="nav_items">
-               <ul style="padding-left: 150px;">
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Services </a></li>
-                  <li><a href="#">Portfolio</a></li>
-                  <li><a href="#">Contact</a></li>
-                  <li><a href="services.html">Services </a></li>
-                  <li><a href="#">Portfolio</a></li>
-               </ul>
-            </span>
-            <button class="toggle-menu" aria-label="Responsive Navigation Menu">☰</button>
-         </nav>
-      </header>
+      <nav class="navbar navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="col-md-3">
+       <a class="navbar-brand" href="#">
+       <img src="assets/logo.png" style="height: 80px; width: 200px; margin-left: 20px;">
+       </a>
+    </div>
+
+    <div class="col-md-9">
+      <div class="col-md-12">
+      <ul id="menu" style="padding: 14px;">
+        <li>&nbsp;&nbsp;<span class="glyphicon glyphicon-earphone"></span>044 4088 0000</li>&nbsp;  &nbsp;&nbsp;
+        <li><span class="glyphicon glyphicon-inbox"></span> shipping@ascent.com </li>&nbsp;
+      </ul>
+      </div>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <!-- <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>      --> 
+        <span><img src="assets/collapse2.png" style="width: 30px;height: 30px;"><span>                 
+      </button>
+    </div>
+    <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="index.html">Home</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="">Services <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="services.html">International Freight Management</a></li>
+            <li><a href="projectcargoworldwide.html">Project Cargo Worldwide</a></li>
+            <li><a href="linearagency.html">Linear Agency</a></li>
+          </ul>
+        </li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right" style="margin-right: 20px;">
+      <li id="quote" class="quote" style="background-color:#0076bf;"><a href="getaquote.html" style="color:#fff;"><span class="glyphicon glyphicon-log-in"></span> Get a Quote</a></li>
+      </ul>
+    </div>
+  </div>
+  </div>
+</nav>
 
       <section class="inner-banner" >
         <div class="hero-text">
