--- a/contact.html
+++ b/contact.html
@@ -218,7 +218,7 @@
 </style>
 
       </section>
-      <footer class="section footer-classic context-dark bg-image">
+      <footer class="section footer-classic context-dark bg-image" style="background-color:#000;">
          <div class="container" >
             <div class="row row-30">
                <div class="col-md-4 col-xl-5">
