--- a/linearagency.html
+++ b/linearagency.html
@@ -147,7 +147,7 @@
     </div>
 
       </section>
-      <footer class="section footer-classic context-dark bg-image">
+      <footer class="section footer-classic context-dark bg-image" style="background-color:#000;">
          <div class="container" >
             <div class="row row-30">
                <div class="col-md-4 col-xl-5">
