--- a/transport.html
+++ b/transport.html
@@ -247,7 +247,7 @@ div.content {
     </div>
 
       </section>
-      <footer class="section footer-classic context-dark bg-image">
+      <footer class="section footer-classic context-dark bg-image" style="background-color: #000">
          <div class="container" >
             <div class="row row-30">
                <div class="col-md-4 col-xl-5">
