--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
       <!-- font -->
       <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
+      <link rel="shortcut icon" type="image/png" href="assets/favicon.PNG"/>
+      <title>Ascent Shipping</title>
       <style>
 
 
