--- a/getaquote.html
+++ b/getaquote.html
@@ -15,6 +15,8 @@
       <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <link rel="stylesheet" type="text/css" href="styles/form.css">
+      <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
+      <title>Ascent Shipping</title>
    </head>
    <body translate="no" >
       <nav class="navbar navbar-fixed-top">
