--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en" >
 
 <head>
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
@@ -12,7 +13,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
-     <link rel="stylesheet" type="text/css" href="styles/mediaqueries.css">
+    <link rel="stylesheet" type="text/css" href="styles/mediaqueries.css">
+    <link rel="shortcut icon" type="image/png" href="assets/favicon.PNG"/>
+    <title>Ascent Shipping</title>
     <style>
 
     html{
