--- a/linearagency.html
+++ b/linearagency.html
@@ -15,6 +15,8 @@
       <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <link rel="stylesheet" type="text/css" href="styles/mediaqueries.css">
+      <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
+      <title>Ascent Shipping</title>
       <style>
 
 
