--- a/transport.html
+++ b/transport.html
@@ -16,6 +16,8 @@
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/mediaqueries.css">
+      <link rel="shortcut icon" type="image/png" href="assets/favicon.PNG"/>
+      <title>Ascent Shipping</title>
       <style>
 
 /*for button get a quote*/
