--- a/eventlogistic.html
+++ b/eventlogistic.html
@@ -15,7 +15,7 @@
       <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <link rel="stylesheet" type="text/css" href="styles/mediaqueries.css">
-      <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
+      <link rel="shortcut icon" type="image/png" href="assets/favicon.PNG"/>
       <title>Ascent Shipping</title>
       <style>
 
@@ -221,7 +221,7 @@ div.content {
          <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
       </div>
 
-      <div class="col-md-8 col-sm-12 content ocean_freight" class="">
+      <div class="col-md-8 col-sm-12 content ocean_freight">
         <h2>Event Logistics</h2>
         <p>Ascent’s team understand how events work, our specialist experience handling every last detail across major international venues including transportation, customs advice and on-site assistance. Whether you are an organiser, exhibitor, trade association or stand builder, you can rely on us to provide a professional and personal service, ensuring you have a trouble-free exhibition experience.
         </p>
