--- a/operations.html
+++ b/operations.html
@@ -18,51 +18,17 @@
       <link rel="shortcut icon" type="image/png" href="assets/favicon.PNG"/>
       <title>Ascent Shipping</title>
       <style>
+
 /*for button get a quote*/
-.cross_line{
-    display: inline-block;
-    position: relative;
-    padding: 1.5em 6em;
-    border-top: solid 2px #000;
-    border-bottom: solid 2px #000;
-    text-decoration: none;
-    font-weight: bold;
-    color: #000;
-    margin-left: 85px;
-    text-decoration: none !important;
-
-}
-#quote{
-  font-size: 20px;
+.quotebutton{
+  text-align: center;
 }
 
-.cross_line:before, .cross_line:after{
-  content: '';
+.btn-warning{
   position: absolute;
-  top: -7px;
-  width: 2px;
-  height: -webkit-calc(100% + 14px);
-  height: calc(100% + 14px);
-  background-color:#000;
-  transition: .8s;
+   top:90%;
+  left:40%;
 }
-.cross_line:before {left: 25px;}
-.cross_line:after {right: 25px;}
-.cross_line:hover:before{
-  top: 0px;
-  left:0;
-  height: 100%;
-}
-.cross_line:hover:after{
-  top: 0px;
-  right: 0;
-  height: 100%;
-}
-
-.ocean_freight h2{
-  margin-top: 45px;
-}
-
 
 
 /*End*/
@@ -202,11 +168,11 @@ div.content {
   </div>
 </nav>
 
-      <section class="inner-banner" >
-        <div class="hero-text">
-          <h1 style="font-size:50px">Services</h1>
-        </div>
-      </section>
+<section class="inner-banner" >
+  <div class="hero-text">
+    <h1 style="font-size:50px">Services</h1>
+  </div>
+</section>
 
       <div class="row row_one">
         <div class="col-md-4 col-sm-12" >
@@ -217,8 +183,14 @@ div.content {
           <a class="active" href="operations.html">RO RO Operations <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="factoryrelocation.html">Machinery and factory relocation <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="eventlogistic.html">Event Logistics <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+
+          <div class="well">
+           <a href="tel:04440880000" type="button" class="btn btn-primary btn-sm btn-block" style="text-align: left; background-color: darkorange;">Call: 044 4088 0000</a>
+           
+           <a href="getaquote.html" type="button" class="btn btn-primary btn-sm btn-block" style="text-align: left;background-color: darkorange;">Get a Quote</a>
+            </div>
           </div>
-             <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
+
         </div>
 
       <div class="col-md-8 col-sm-12 content ocean_freight">
@@ -281,18 +253,14 @@ div.content {
       </footer>
    </body>
 
-
-
 <style>
 
 @media screen and (max-width: 365px){
   .sidebar{
     margin:9px 0px;
-    width: 100%;
+    width: 90%;
   }
-  .cross_line {
-    margin-left: -17px;
-  }
+ 
   .ocean_freight {
     margin-left: 16px;
   }
@@ -301,7 +269,14 @@ div.content {
   }
 }
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 767px){
+  .sidebar{
+    width: 95%;
+    margin:50px 0;
+  }
+}
+
+@media screen and (max-width: 991px){
   .ocean_freight ul{
     margin-left: 50px;
   }
@@ -310,30 +285,48 @@ div.content {
   }
   .ocean_freight p{
     margin-left: 20px;
+    margin-right: 20px;
   }
   .sidebar{
     width: 100%;
     margin:50px 0;
   }
-  .cross_line {
-    left: 18%;
-  }
+  
 }
 
 @media screen and (min-width: 1900px){
   .sidebar{
     margin: 52px 52px;
   }
-   div.ocean_freight p{
-    padding-right:125px;
+ 
+  div.col-md-8.col-sm-12.content.ocean_freight{
+    margin-top:30px;
+    padding-right:95px;
   }
 
 }
 
 
-@media screen and (min-width:1200px){
-    p{
+@media screen and (max-width:1500px){
+  p{
     padding-right: 15px;
+  }
+  div.col-md-8.col-sm-12.content.ocean_freight{
+    margin-top:30px;
+  }
+
+  html{
+    overflow-x: hidden;
+  }
+}
+
+
+@media screen and (max-width:1900px){
+  p{
+    padding-right: 15px;
+  }
+  div.col-md-8.col-sm-12.content.ocean_freight{
+    margin-top:30px;
   }
 }
 
