--- a/airfreight.html
+++ b/airfreight.html
@@ -18,57 +18,9 @@
       <title>Ascent Shipping</title>
       <style>
 
-/*for button get a quote*/
-.cross_line{
-    display: inline-block;
-    position: relative;
-    padding: 1.5em 6em;
-    border-top: solid 2px #000;
-    border-bottom: solid 2px #000;
-    text-decoration: none;
-    font-weight: bold;
-    color: #000;
-    margin-left: 85px;
-    text-decoration: none !important;
-
-}
-#quote{
-  font-size: 20px;
-}
-
-.cross_line:before, .cross_line:after{
-  content: '';
-  position: absolute;
-  top: -7px;
-  width: 2px;
-  height: -webkit-calc(100% + 14px);
-  height: calc(100% + 14px);
-  background-color:#000;
-  transition: .8s;
-}
-.cross_line:before {left: 25px;}
-.cross_line:after {right: 25px;}
-.cross_line:hover:before{
-  top: 0px;
-  left:0;
-  height: 100%;
-}
-.cross_line:hover:after{
-  top: 0px;
-  right: 0;
-  height: 100%;
-}
-
-.ocean_freight h2{
-  margin-top: 45px;
-}
-
-/*End*/
-
-  html{
+html{
     overflow-x: hidden;
   }
-
 
   body{
     font-family: 'Bitter', serif;
@@ -91,15 +43,8 @@
   .row_one{
     background-color:#fff;
   }
-
-  div.ocean_freight{
-    margin-bottom: 60px;
-  }
  
 /*SideBar Nav*/
-
-
-
 .sidebar {
   margin: 50px 9px;
   padding: 0;
@@ -113,14 +58,13 @@
 
 .sidebar a {
   display: block;
-    color: black;
-    padding: 16px;
-    text-decoration: none;
-    /* text-align: center; */
-     text-transform: capitalize; 
-    font-size: 14px;
-    font-weight: 700;
-    border-bottom: 0px solid #000000;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+  text-transform: capitalize; 
+  font-size: 14px;
+  font-weight: 700;
+  border-bottom: 0px solid #000000;
 }
 
 .sidebar a.active {
@@ -142,12 +86,12 @@ div.content {
 }
 
 .inner-banner{
-    height: 400px;
-    background: rgba(255, 255, 255, 0.5) url('assets/FREIGHT MANAGEMENT HOME.jpg') no-repeat 0 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+  height: 400px;
+  background: rgba(255, 255, 255, 0.5) url('assets/FREIGHT MANAGEMENT HOME.jpg') no-repeat 0 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 .hero-text {
   text-align: center;
@@ -220,8 +164,12 @@ div.content {
           <a href="transport.html">Transport Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="export.html">Export services<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="insurance.html">Cargo Insurance<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <div class="well">
+           <a href="tel:04440880000" type="button" class="btn btn-primary btn-sm btn-block" style="text-align: left; background-color: #00a0e3;">Call: 044 4088 0000</a>
+           
+           <a href="getaquote.html" type="button" class="btn btn-primary btn-sm btn-block" style="text-align: left;background-color: #00a0e3;">Get a Quote</a>
+            </div>
         </div>
-        <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
       </div>
 
       <div class="ocean_freight col-md-8 col-sm-12 content" class="">
@@ -307,20 +255,25 @@ div.content {
 @media screen and (max-width: 365px){
   .sidebar{
     margin:9px 0px;
-    width: 100%;
+    width: 90%;
   }
-  .cross_line {
-    margin-left: -17px;
-  }
+ 
   .ocean_freight {
     margin-left: 16px;
   }
   div.content {
-  padding: 1px 20px;
+  padding: 1px 10px;
   }
 }
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 767px){
+  .sidebar{
+    width: 95%;
+    margin:50px 0;
+  }
+}
+
+@media screen and (max-width: 991px){
   .ocean_freight ul{
     margin-left: 50px;
   }
@@ -329,33 +282,50 @@ div.content {
   }
   .ocean_freight p{
     margin-left: 20px;
+    margin-right: 20px;
   }
   .sidebar{
     width: 100%;
     margin:50px 0;
   }
-  .cross_line {
-    left: 18%;
-  }
+  
 }
 
 @media screen and (min-width: 1900px){
   .sidebar{
     margin: 52px 52px;
   }
-   div.ocean_freight p{
-    padding-right:125px;
+ 
+  div.col-md-8.col-sm-12.content.ocean_freight{
+    margin-top:30px;
+    padding-right:95px;
   }
 
 }
 
 
-@media screen and (min-width:1200px){
-    p{
+@media screen and (max-width:1500px){
+  p{
     padding-right: 15px;
   }
+  div.col-md-8.col-sm-12.content.ocean_freight{
+    margin-top:30px;
+  }
+
+  html{
+    overflow-x: hidden;
+  }
 }
 
+
+@media screen and (max-width:1900px){
+  p{
+    padding-right: 15px;
+  }
+  div.col-md-8.col-sm-12.content.ocean_freight{
+    margin-top:30px;
+  }
+}
 
 </style>
 </html>
