--- a/operations.html
+++ b/operations.html
@@ -19,19 +19,7 @@
       <title>Ascent Shipping</title>
       <style>
 
-/*for button get a quote*/
-.quotebutton{
-  text-align: center;
-}
 
-.btn-warning{
-  position: absolute;
-   top:90%;
-  left:40%;
-}
-
-
-/*End*/
 
   html{
     overflow-x: hidden;
@@ -60,9 +48,6 @@
   }
  
 /*SideBar Nav*/
-
-
-
 .sidebar {
   margin: 50px 9px;
   padding: 0;
@@ -76,14 +61,13 @@
 
 .sidebar a {
   display: block;
-    color: black;
-    padding: 16px;
-    text-decoration: none;
-    /* text-align: center; */
-     text-transform: capitalize; 
-    font-size: 14px;
-    font-weight: 700;
-    border-bottom: 0px solid #000000;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+  text-transform: capitalize; 
+  font-size: 14px;
+  font-weight: 700;
+  border-bottom: 0px solid #000000;
 }
 
 .sidebar a.active {
@@ -105,12 +89,12 @@ div.content {
 }
 
 .inner-banner{
-    height: 400px;
-    background: rgba(255, 255, 255, 0.5) url('assets/FREIGHT MANAGEMENT HOME.jpg') no-repeat 0 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+  height: 400px;
+  background: rgba(255, 255, 255, 0.5) url('assets/FREIGHT MANAGEMENT HOME.jpg') no-repeat 0 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 .hero-text {
   text-align: center;
@@ -141,9 +125,6 @@ div.content {
       </div>
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <!-- <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>      --> 
         <span><img src="assets/collapse2.png" style="width: 30px;height: 30px;"><span>                 
       </button>
     </div>
@@ -185,9 +166,9 @@ div.content {
           <a href="eventlogistic.html">Event Logistics <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
 
           <div class="well">
-           <a href="tel:04440880000" type="button" class="btn btn-primary btn-sm btn-block" style="text-align: left; background-color: darkorange;">Call: 044 4088 0000</a>
+           <a href="tel:04440880000" type="button" class="btn btn-primary btn-sm btn-block" style="text-align: left; background-color: #00a0e3;">Call: 044 4088 0000</a>
            
-           <a href="getaquote.html" type="button" class="btn btn-primary btn-sm btn-block" style="text-align: left;background-color: darkorange;">Get a Quote</a>
+           <a href="getaquote.html" type="button" class="btn btn-primary btn-sm btn-block" style="text-align: left;background-color: #00a0e3;">Get a Quote</a>
             </div>
           </div>
 
@@ -232,7 +213,6 @@ div.content {
                   </dl>
                </div>
                <div class="col-md-4" style="padding-top:40px; ">
-                  <!-- <h3>Contacts</h3> -->
                   <dl class="contact-list">
                      <dt><span class="glyphicon glyphicon-home">&nbsp; </span>ADDRESS</dt>
                      <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
