--- a/export.html
+++ b/export.html
@@ -109,7 +109,7 @@ div.content {
       <nav class="navbar navbar-fixed-top">
   <div class="container-fluid">
     <div class="col-md-3">
-       <a class="navbar-brand" href="#">
+       <a class="navbar-brand" href="index.html">
        <img src="assets/logo.png" style="height: 80px; width: 200px; margin-left: 20px;">
        </a>
     </div>
