--- a/getaquote.html
+++ b/getaquote.html
@@ -22,7 +22,7 @@
       <nav class="navbar navbar-fixed-top">
   <div class="container-fluid">
     <div class="col-md-3">
-       <a class="navbar-brand" href="#">
+       <a class="navbar-brand" href="index.html">
        <img src="assets/logo.png" style="height: 80px; width: 200px; margin-left: 20px;">
        </a>
     </div>
