--- a/operations.html
+++ b/operations.html
@@ -19,8 +19,6 @@
       <title>Ascent Shipping</title>
       <style>
 
-
-
   html{
     overflow-x: hidden;
   }
@@ -111,7 +109,7 @@ div.content {
       <nav class="navbar navbar-fixed-top">
   <div class="container-fluid">
     <div class="col-md-3">
-       <a class="navbar-brand" href="#">
+       <a class="navbar-brand" href="index.html">
        <img src="assets/logo.png" style="height: 80px; width: 200px; margin-left: 20px;">
        </a>
     </div>
