--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ ul li a {
  <nav class="navbar navbar-fixed-top">
   <div class="container-fluid">
     <div class="col-md-3">
-       <a class="navbar-brand" href="#">
+       <a class="navbar-brand" href="index.html">
        <img src="assets/logo.png" style="height: 80px; width: 200px; margin-left: 20px;">
        </a>
     </div>
